image fixes and alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,3 @@ h3 {
     color: cyan;
     text-align: center;
 }
-
-body {
-    background-image: url("../images/challenger-stands-front-spooky-castle-illustration.jpg");
-}
